# AdventOfCode

./: .gitignore  Cargo.toml  template.rs
2021/: Cargo.toml  rustfmt.toml
2021/day-eight/src/: main.rs
2021/day-eighteen/: Cargo.toml
2021/day-eighteen/src/: main.rs
2021/day-eleven/: test-steps.txt
2021/day-fifteen/: Cargo.toml
2021/day-fifteen/src/: dijkstra.rs  main.rs
2021/day-four/src/: main.rs
2021/day-fourteen/: Cargo.toml
2021/day-fourteen/src/: main.rs
2021/day-nine/: Cargo.toml
2021/day-nine/src/: main.rs
2021/day-nineteen/: Cargo.toml
2021/day-nineteen/src/: main.rs
2021/day-one/src/: main.rs
2021/day-seven/: Cargo.toml
2021/day-seventeen/src/: main.rs
2021/day-sixteen/: Cargo.toml
2021/day-sixteen/src/: main.rs
2021/day-ten/src/: main.rs
2021/day-thirteen/: Cargo.toml
2021/day-thirteen/src/: main.rs
2021/day-three/src/: main.rs
2021/day-twelve/src/: main.rs
2021/day-twenty/: Cargo.toml
2021/day-twenty/src/: main.rs
2021/day-twentyfive/: Cargo.toml
2021/day-twentyfive/src/: main.rs
2021/day-twentyfour/: Book1.xlsx  Cargo.toml  README.md
2021/day-twentyfour/src/: main.rs
2021/day-twentyone/: Cargo.toml
2021/day-twentyone/src/: main.rs
2021/day-twentythree/: Cargo.toml  part1-ans.txt
2021/day-twentythree/src/: main.rs
2021/day-twentytwo/: Cargo.toml
2021/day-twentytwo/src/: main.rs
2021/day-two/src/: main.rs
2022/: Cargo.toml  template.rs
2022/benches/: aoc_benchmark.rs
2022/src/: grid.rs  lib.rs  main.rs
2022/src/day01/: mod.rs
2022/src/day02/: mod.rs
2022/src/day03/: mod.rs
(+72 files in other folders)
