[workspace]

members = [
    "day-one",
    "day-two",
    "day-three",
    "day-four",
    "day-five",
    "day-six",
    "day-seven",
    "day-eight",
    "day-nine",
    "day-ten",
    "day-eleven",
    "day-twelve",
    "day-thirteen",
    "day-fourteen",
    "day-fifteen",
    "day-sixteen",
    "day-seventeen",
    "day-eighteen",
    "day-nineteen",
    "day-twenty",
    "day-twentyone",
    "day-twentytwo",
    "day-twentythree",
    "day-twentyfour",
    "day-twentyfive",
]
