[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc2022"
path = "src/lib.rs"

[dependencies]
itertools = "0.10.5"
ndarray = "0.15.6"
nom = "7.1.1"
sscanf = "0.4.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "aoc_benchmark"
harness = false
